<resources>
    <string name="app_name">TaskClass</string>
    <string name="ErrorMsgAddTask">error adding task</string>
    <string name="ErrorMsgUpdateTask">Error updating task</string>
    <string name="ErrorMsgDeleteTask">Error deleting task</string>
    <string name="ErrorMsgAllTasks">Error getting task list</string>
    <string name="ErrorMsgGetByIdTask">Error getting task by ID</string>
    <string name="ErrorMsgTasksByCourse">Error getting assignments by course</string>
    <string name="ErrorMsgTasksByStatus">Error filtering tasks by status</string>
    <string name="ErrorMsgMarkDone">Error marking task as completed</string>
    <string name="btnAddWork">+</string>
    <string name="btnSave">Save</string>
    <string name="btnAllCourses">All</string>
    <string name="btnCourse1">Course 1</string>
    <string name="btnCourse2">Course 2</string>
    <string name="btnClose">Close</string>
    <string name="btnView">View</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDelete">Delete</string>
    <string name="TxtMessage">" There are no tasks."</string>
    <string name="TxtTitle">TaskClass</string>
    <string name="TxtTitle2">Add Task</string>
    <string name="TxtTitle3">Delete Task</string>
    <string name="txtAddTitle">Title:</string>
    <string name="TxtAddDescription">Description:</string>
    <string name="TxtAddDate">Delivery Date:</string>
    <string name="btnCourse">Course:</string>
    <string name="btnReminder">Reminder</string>
    <string name="btnAttach">Attach</string>
    <string name="TxtCamera">Take photo</string>
    <string name="TxtGallery">Select from gallery</string>
    <string name="course_label">Course: %1$s</string>
    <string name="no_course">Not Course</string>
</resources>