<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Search_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2167F3"
    tools:context=".ActivityPhoto">

    <androidx.cardview.widget.CardView
        android:layout_width="347dp"
        android:layout_height="231dp"
        android:background="#B8AFAF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="371dp"
            android:layout_height="224dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="94dp"
                android:layout_height="56dp"
                android:backgroundTint="#A9A0A0"
                android:text="@string/btnClose"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="160dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtCamera"
                tools:layout_editor_absoluteX="66dp"
                tools:layout_editor_absoluteY="76dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="95dp"
                android:layout_height="57dp"
                android:backgroundTint="#A9A0A0"
                android:text="@string/btnOk"
                tools:layout_editor_absoluteX="184dp"
                tools:layout_editor_absoluteY="160dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtGallery"
                tools:layout_editor_absoluteX="66dp"
                tools:layout_editor_absoluteY="123dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="32dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/camera"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="68dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="33dp"
                android:layout_height="37dp"
                app:srcCompat="@drawable/gallery"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="112dp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#922E2E"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="59dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="72dp"
                android:layout_height="96dp"
                app:srcCompat="@drawable/unnamed__2__removebg_preview"
                tools:layout_editor_absoluteX="-6dp"
                tools:layout_editor_absoluteY="-20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>